# reverse_search

./: Cargo.toml  LICENSE  README.md  plan.md
examples/mnist/: mnist.ipynb
examples/synthetic_data/: states.out  states_out.jsonl  synthetic.ipynb  synthetic.json  synthetic_out.json
src/: algorithm.rs  guided_search.rs  lib.rs  main.rs  reverse_search.rs  search.rs
