[package]
name = "reverse_search"
version = "0.0.4"
edition = "2021"
description = "An implementation of Avis and Fukuda's reverse search algorithm for computing the Minkowski Sums of polytopes."
readme = "README.md"
repository = "https://github.com/aurelienwaite/reverse_search"
license = "MIT"

include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "algorithm"
path = "src/algorithm.rs"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
serde = { version = "1.0.159", features = ["serde_derive", "rc"] }
serde_json = "1.0"
good_lp = { version = "1.7.0", features = ["lpsolve"], default-features = false }
anyhow = "1.0"
log = "0.4"
simplelog = "0.12.2"
ndarray = { version = "0.15.6", features = ["serde"] } 
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
itertools = "0.12.1"